--- a/finquant/Cargo.toml
+++ b/finquant/Cargo.toml
@@ -11,4 +11,6 @@ readme = "../README.md"
 [features]
 
 [dependencies]
-chrono = "^0.4.31"
+chrono = { version = "^0.4.31", features = ["serde"] }
+serde = { version = "^1.0.188", features = ["derive"] }
+serde_json = "1.0.107"
