--- a/finquant/Cargo.toml
+++ b/finquant/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "finquant"
-version = "0.0.7"
+version = "0.0.8"
 authors = ["Jeremy Wang <j.wang@quantransform.co.uk>"]
 edition = "2021"
 license = "MIT"
@@ -13,4 +13,6 @@ readme = "../README.md"
 [dependencies]
 chrono = { version = "^0.4.31", features = ["serde"] }
 serde = { version = "^1.0.188", features = ["derive"] }
-serde_json = "1.0.107"
+serde_json = "^1.0.107"
+strum = "0.25.0"
+strum_macros = "^0.25.2"
