--- a/finquant/Cargo.toml
+++ b/finquant/Cargo.toml
@@ -12,6 +12,7 @@ readme = "../README.md"
 
 [dependencies]
 chrono = { version = "^0.4.31", features = ["serde"] }
+iso_currency = { version = "0.4.4", features = ["with-serde"] }
 serde = { version = "^1.0.188", features = ["derive"] }
 serde_json = "^1.0.107"
 strum = "0.25.0"
