--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,9 @@ authors = ["Jeremy Wang <j.wang@quantransform.co.uk>", "David Steiner <david_j_s
 edition = "2021"
 license = "MIT"
 description = "Experimental Rust Quant Library"
-keywords = ["quant"]
+keywords = ["quant", "calendar", "forex", "fx", "forward"]
 readme = "README.md"
+repository = "https://github.com/quantransform/finquant"
 
 [features]
 
