--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "finquant"
-version = "0.0.22"
+version = "0.0.23"
 authors = ["Jeremy Wang <j.wang@quantransform.co.uk>", "David Steiner <david_j_steiner@yahoo.co.nz>"]
 edition = "2021"
 license = "MIT"
 description = "Experimental Rust Quant Library"
-keywords = ["quant", "calendar", "forex", "fx", "forward"]
+keywords = ["quant", "calendar", "market-risks", "rates", "derivatives",]
 readme = "README.md"
 repository = "https://github.com/quantransform/finquant"
 
