--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "finquant"
-version = "0.0.23"
+version = "0.0.24"
 authors = ["Jeremy Wang <j.wang@quantransform.co.uk>", "David Steiner <david_j_steiner@yahoo.co.nz>"]
 edition = "2021"
 license = "MIT"
@@ -13,6 +13,7 @@ repository = "https://github.com/quantransform/finquant"
 
 [dependencies]
 chrono = { version = "^0.4.31", features = ["serde"] }
+float_eq = "1.0.1"
 iso_currency = { version = "0.4.4", features = ["with-serde"] }
 serde = { version = "^1.0.189", features = ["derive"] }
 serde_json = "^1.0.107"
