--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "finquant"
-version = "0.0.25"
+version = "0.0.26"
 authors = ["Jeremy Wang <j.wang@quantransform.co.uk>", "David Steiner <david_j_steiner@yahoo.co.nz>"]
 edition = "2021"
 license = "MIT"
@@ -19,3 +19,4 @@ serde = { version = "^1.0.189", features = ["derive"] }
 serde_json = "^1.0.107"
 strum = "0.25.0"
 strum_macros = "^0.25.3"
+typetag = "0.2.13"
