--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ repository = "https://github.com/quantransform/finquant"
 chrono = { version = "^0.4.31", features = ["serde"] }
 float_eq = "1.0.1"
 iso_currency = { version = "0.4.4", features = ["with-serde"] }
+polars = "0.35.2"
 serde = { version = "^1.0.189", features = ["derive"] }
 serde_json = "^1.0.107"
 strum = "0.25.0"
