--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,12 +13,12 @@ repository = "https://github.com/quantransform/finquant"
 
 [dependencies]
 chrono = { version = "^0.4.31", features = ["serde"] }
-float_eq = "1.0.1"
 iso_currency = { version = "0.4.4", features = ["with-serde"] }
 serde = { version = "^1.0.189", features = ["derive"] }
 serde_json = "^1.0.107"
-strum = "0.25.0"
-strum_macros = "^0.25.3"
+strum = "0.26"
+strum_macros = "0.26"
+thiserror = "1"
 typetag = "0.2.13"
 
 [dev-dependencies]
