--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ repository = "https://github.com/quantransform/finquant"
 chrono = { version = "^0.4.35", features = ["serde"] }
 float_eq = "1.0.1"
 iso_currency = { version = "0.4.4", features = ["with-serde"] }
+roots = "0.0.8"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "^1.0.114"
 strum = "^0.26.2"
