--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "finquant"
-version = "0.0.43"
+version = "0.0.44"
 authors = ["Jeremy Wang <j.wang@quantransform.co.uk>", "David Steiner <david_j_steiner@yahoo.co.nz>"]
 edition = "2021"
 license = "MIT"
@@ -12,16 +12,16 @@ repository = "https://github.com/quantransform/finquant"
 [features]
 
 [dependencies]
-chrono = { version = "^0.4.35", features = ["serde"] }
+chrono = { version = "^0.4.38", features = ["serde"] }
 float_eq = "^1.0.1"
 iso_currency = { version = "^0.4.4", features = ["with-serde"] }
 roots = "^0.0.8"
 serde = { version = "^1.0.197", features = ["derive"] }
-serde_json = "^1.0.114"
+serde_json = "^1.0.116"
 strum = "^0.26.2"
-strum_macros = "0.26.2"
-thiserror = "1"
+strum_macros = "^0.26.2"
+thiserror = "^1.0.58"
 typetag = "^0.2.16"
 
 [dev-dependencies]
-rstest = "0.18"
+rstest = "^0.19.0"
