--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,12 +2,13 @@
 name = "finquant"
 version = "0.0.53"
 authors = ["Jeremy Wang <j.wang@quantransform.co.uk>", "David Steiner <david_j_steiner@yahoo.co.nz>"]
-edition = "2024"
-license = "MIT"
+license = "MIT OR Apache-2.0"
 description = "Experimental Rust Quant Library"
 keywords = ["quant", "calendar", "market-risks", "rates", "derivatives",]
 readme = "README.md"
 repository = "https://github.com/quantransform/finquant"
+edition = "2024"
+rust-version = "1.85"
 
 [features]
 
