--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,34 +15,43 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@stable
-      - name: clippy
+        with:
+          toolchain: nightly-2024
+      - name: Clippy
         run: cargo clippy -- -D warnings
-      - name: rustfmt
+      - name: Rustfmt
         run: cargo fmt --all --check
+
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - name: Build
-      run: cargo build --verbose
-    - name: Run tests
-      run: cargo test --verbose
+      - uses: actions/checkout@v3
+      - uses: dtolnay/rust-toolchain@stable
+        with:
+          toolchain: nightly-2024
+      - name: Build
+        run: cargo build --verbose
+      - name: Run tests
+        run: cargo test --verbose
+
   coverage:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - uses: dtolnay/rust-toolchain@stable
+        with:
+          toolchain: nightly-2024
       - name: Install Tarpaulin
         run: cargo install cargo-tarpaulin
       - name: Coverage Report
-        run:
-          cargo tarpaulin
-          --verbose
-          --all-features
-          --workspace
-          --timeout 120
+        run: |
+          cargo tarpaulin \
+          --verbose \
+          --all-features \
+          --workspace \
+          --timeout 120 \
           --out Xml
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-
