--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,15 +13,15 @@ rust-version = "1.85"
 [features]
 
 [dependencies]
-chrono = { version = "^0.4.39", features = ["serde"] }
-iso_currency = { version = "^0.5.1", features = ["with-serde"] }
-roots = "^0.0.8"
-serde = { version = "^1.0.218", features = ["derive"] }
-serde_json = "^1.0.119"
-strum = "^0.27.1"
-strum_macros = "^0.27.1"
-thiserror = "^2.0.11"
-typetag = "^0.2.19"
+chrono = { version = "0.4.41", features = ["serde"] }
+iso_currency = { version = "0.5.3", features = ["with-serde"] }
+roots = "0.0.8"
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.142"
+strum = "0.27.2"
+strum_macros = "0.27.2"
+thiserror = "2.0.12"
+typetag = "0.2.20"
 
 [dev-dependencies]
 rstest = "^0.24.0"
