--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ rust-version = "1.85"
 [dependencies]
 chrono = { version = "0.4.41", features = ["serde"] }
 iso_currency = { version = "0.5.3", features = ["with-serde"] }
+lazy_static = "1.4"
+once_cell = "1.21.3"
 roots = "0.0.8"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.142"
